Update backend to store url of the profile picture. This will be used to get the friends list image and avoid overloading the API stockage.
