# pictural-api/src/main/kotlin/dev/xavierc/pictural/api/models/UserAddRequest.kt
@@ -6,6 +6,6 @@ import java.util.*
  * Request use to add the profile of an user
  *
  * @param name Name of the user
- * @param pictureUuid pictureUuid of the user
+ * @param pictureUrl Url of the user profile picture
  */
-data class UserAddRequest(val name: String, val pictureUuid: UUID?)
+data class UserAddRequest(val name: String, val pictureUrl: String?)
